--- a/src/acess/css/mainScreen.css
+++ b/src/acess/css/mainScreen.css
@@ -1,7 +1,10 @@
 .mainScreen {
-    height: 80%;
-    width: 98%;
+    height: 84%;
+    width: 100%;
     background: #1d1f2d;
     display: flex;
-    padding: 1%;
+}
+.routers {
+    height: 100%;
+    width: 100%;
 }
