--- a/src/acess/css/settings.css
+++ b/src/acess/css/settings.css
@@ -32,6 +32,11 @@
     height: 54px;
     outline: none;
     margin: 50px 0;
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: -0.01em;
+    color: #000000;
+    padding: 0 20px;
 }
 
 
