--- a/src/acess/css/settings.css
+++ b/src/acess/css/settings.css
@@ -140,13 +140,13 @@ span.checkboxText {
 input[type=radio] {
     height: 36px;
     width: 36px;
-    border: 2px solid white;
+    border: 1px solid white;
     border-radius: 50%;
     -webkit-appearance: none;
     outline: none;
 }
 input[type=radio]:checked {
-    border: 2px solid rgba(95, 120, 211, 1);
+    border: 1px solid rgba(95, 120, 211, 1);
 }
 input[type=radio]:checked + span {
     width: 26px;
@@ -154,7 +154,7 @@ input[type=radio]:checked + span {
     background: rgba(95, 120, 211, 1);
     display: inline-block;
     position: relative;
-    left: -33.5px;
+    left: -34px;
     top: -5px;
     border-radius: 50%;
 }
@@ -194,6 +194,7 @@ input[type=radio]:checked + span {
     border: 1px solid #5F78D3;
     box-sizing: border-box;
     border-radius: 3px;
+    cursor: pointer;
 }
 input[type="checkbox"]:checked + span.violationMessageCheckboxToggle  	{
     background-image: url("/image/check.svg");
@@ -215,4 +216,38 @@ input[type="checkbox"]:checked + span.violationMessageCheckboxToggle  	{
     letter-spacing: -0.01em;
     color: #FFFFFF;
     text-align: left;
+}
+
+
+.formButtonBlock {
+    display: block;
+    width: 1140px;
+    margin: auto;
+}
+.settingsButton {
+    display: block;
+    width: 100%;
+    height: 54px;
+    border-radius: 3px;
+    outline: none;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: -0.01em;
+    color: #FFFFFF;
+    margin: 10px 0;
+    border: 1px solid #5F78D3;
+    cursor: pointer;
+}
+.saveSettings {
+    background: #5F78D3;
+    box-shadow: 0 4px 12px rgba(95, 120, 211, 0.4);
+}
+.cancelSettings {
+    background: none;
+}
+
+input[type=radio],
+input[type=checkbox] {
+    cursor: pointer;
 }
