--- a/src/acess/css/settings.css
+++ b/src/acess/css/settings.css
@@ -11,6 +11,7 @@
     background: rgba(17, 18, 28, 1);
     margin: 70px 15px;
     padding: 20px;
+    border-radius: 3px;
 }
 .settingsBlocks {
     color: white;
@@ -37,6 +38,7 @@
     letter-spacing: -0.01em;
     color: #000000;
     padding: 0 20px;
+    border-radius: 3px;
 }
 
 
