--- a/src/acess/css/mainScreen.css
+++ b/src/acess/css/mainScreen.css
@@ -2,9 +2,8 @@
     height: 100%;
     width: 100%;
     background: #1d1f2d;
-    display: flex;
 }
 .routers {
-    height: 88%;
+    height: calc(100% - 120px);
     width: 100%;
 }
