--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 .App {
   text-align: center;
-  position: relative;
-  height: 100%;
-  width: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  min-width: 1280px;
+  min-height: 780px;
 }
 @font-face{
   font-family: 'Roboto';
@@ -12,8 +16,10 @@ div, input, span, select, option, button {
   font-family: Roboto;
 }
 body {
-  min-width: 1280px;
-  min-height: 780px;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 @media (prefers-reduced-motion: no-preference) {}
