--- a/src/acess/css/cameras.css
+++ b/src/acess/css/cameras.css
@@ -6,27 +6,38 @@
 .viewCameras {
     display: flex;
     width: 100%;
+    height: 100%;
 }
 .firstCameraWithThree {
     width: 66%;
-    margin-left: 20px;
 }
 .rightViewWithThree {
     width: 34%;
-    margin-right: 20px;
 }
 .rightViewWithThree .cameraView {
-    height: calc(50% - 14px);
+    height: 50%;
 }
+
+.threeItemView {
+    width: calc(100% - 12px);
+    height: calc(100% - 12px);
+    margin: 6px;
+    display: flex;
+}
+
 .sixItemView {
     display: grid;
-    grid-template-columns: repeat(3, 33vw);
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: repeat(2, 41vh);
-    margin: 0 auto;
+    margin: 6px;
+    width: 100%;
+    height: 100%;
 }
 .eightItemView {
     display: grid;
-    grid-template-columns: repeat(4, 24.9vw);
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: repeat(2, 36vh);
-    margin: 0 auto;
+    margin: 6px;
+    width: 100%;
+    height: 100%;
 }
