--- a/src/acess/css/toolBar.css
+++ b/src/acess/css/toolBar.css
@@ -1,7 +1,7 @@
 .toolBar {
     background: #11121c;
     width: 100%;
-    height: 12%;
+    height: 120px;
     display: flex;
     justify-content: center;
     position: absolute;
@@ -9,10 +9,10 @@
     left: 0;
 }
 .toolBarButton {
-    width: 15vh;
-    margin: 0 2vh;
+    width: 170px;
+    margin: 0 10px;
     cursor: pointer;
-    padding: 2vw 2vw 1vw 2vw;
+    padding: 10px;
     display: block;
 }
 .toolBarButton:hover svg,
@@ -30,6 +30,6 @@
     color: white;
 }
 .toolBarButton span {
-    font-size: 1vw;
+    font-size: 16px;
     color: white;
 }
