--- a/src/acess/css/mainScreen.css
+++ b/src/acess/css/mainScreen.css
@@ -7,3 +7,20 @@
     height: calc(100% - 120px);
     width: 100%;
 }
+.blurScreen {
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+    z-index: 0 !important;
+}
+.wrapScreen {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+}
+.modalBlock {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+}
