--- a/src/access/css/settings.css
+++ b/src/access/css/settings.css
@@ -134,7 +134,7 @@ span.checkboxText {
     border-radius: 50%;
     background-image: url("/image/vector.svg");
     border: none;
-    margin: 0 20px;
+    margin: 0 10px;
 }
 
 
@@ -187,8 +187,8 @@ input[type=radio]:checked + span {
 }
 
 .violationMessage {
-    margin-top: 55px;
-    margin-left: 5px;
+    margin-top: 25px;
+    margin-left: 0;
 }
 .violationMessageCheckbox {
     display: block;
